# rust

00/ex00/: hello.rs
00/ex01/: min.rs
00/ex02/: collatz.rs  print_bytes.rs  yes.rs
00/ex03/: fizzbuzz.rs
00/ex04/: Cargo.toml
00/ex04/src/: main.rs  other.rs  overflow.rs
00/ex05/: Cargo.toml
00/ex05/src/: main.rs
01/ex00/src/: lib.rs
01/ex01/src/: lib.rs
01/ex02/src/: lib.rs
01/ex03/src/: lib.rs
01/ex04/src/: lib.rs
02/: README.md
02/ex01/src/: lib.rs
02/ex02/src/: main.rs
03/ex00/: Cargo.toml
03/ex00/src/: main.rs
